--- a/PMS/src/main/resources/application.properties
+++ b/PMS/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port =8082
+spring.datasource.url=jdbc:mysql://localhost:3306/product?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=welcome$1234
 
+#hibernate properties
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialext.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
