Adding Spring security Rest

--- a/PMS/src/main/resources/application.properties
+++ b/PMS/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=welcome$1234
 
 #hibernate properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialext.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
